--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -1,9 +1,11 @@
 .footer{
-	padding: 251px 10px 70px;
+	//padding: 251px 10px 70px;
+	padding: 200px 10px 20px;
 	background-color: #1b1815;
 	//mobile
 	@include break3{
-		padding: 60px 10px 30px;
+		//padding: 60px 10px 30px;
+		padding: 30px 10px 0;
 	}
 	&_wrap{
 		max-width: 800px;
