--- a/sass/blocks/_form-block.scss
+++ b/sass/blocks/_form-block.scss
@@ -22,7 +22,7 @@
 			margin: 0;
 			padding: 55px 10px 60px;
 			position: static;
-			text-align: left;
+			text-align: right;
 		}
 	}
 	&_title{
@@ -43,6 +43,7 @@
 			width: 100%;
 			margin: 0 auto 34px;
 			padding: 32px 0 0;
+			text-align: left;
 		}
 	}
 	&_left{
