--- a/sass/blocks/_menu.scss
+++ b/sass/blocks/_menu.scss
@@ -18,16 +18,20 @@
 	&_wrap{
 		@include break3{
 			padding: 27px 0 0;
-			width: 70%;
-			height: 100%;
+			//width: 70%;
+			width: 100%;
+			//height: 100%;
+			height: auto;
 			background-color: #fff;
 			cursor: default;
 			position: absolute;
-			top: 0;
-			left: -70%;
+			//top: 0;
+			//left: -70%;
+			bottom: -300px;
+			left: 0;
 			transition: all 0.2s;
 			.menu__on &{
-				transform: translateX(100%);
+				transform: translateY(-300px);
 			}
 		}
 	}
